# async-tempfile-rs

./: .codespellrc  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: rust.yml
src/: errors.rs  lib.rs  random_name.rs  tempdir.rs  tempfile.rs
tests/: tests.rs
