[package]
name = "async-tempfile"
version = "0.2.0"
description = "Automatically deleted async I/O temporary files."
documentation = "https://docs.rs/async-tempfile/latest/async_tempfile/"
license = "MIT"
authors = ["Markus Mayer"]
repository = "https://github.com/sunsided/async-tempfile-rs"
keywords = ["tokio", "temporary-files", "temp"]
categories = ["asynchronous", "filesystem"]
readme = "README.md"
edition = "2021"

[dependencies]
tokio = { version = "1.21.2", features = ["fs"] }
uuid = { version = "1.2.1", features = ["v4"] }

[dev-dependencies]
tokio = { version = "1.21.2", features = ["rt-multi-thread", "macros"] }
tokio-test = "0.4.2"
